--- a/basics.ipynb
+++ b/basics.ipynb
@@ -433,10 +433,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thanx Fadl :) \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Thanx Fadl :) \")"
+   ]
   },
   {
    "cell_type": "code",
