i have added some code

--- a/basics.ipynb
+++ b/basics.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Welcome to python 3"
+    "<div class=\"alert alert-block alert-info\">\n",
+    "<b>Hey:</b>This is A summary of python basics for A Python Data Analyst’s Toolkit book. \n",
+    "</div>"
    ]
   },
   {
@@ -377,8 +379,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The date arguments – day, month, and \n",
-    "year – are mandatory, but the time argument (like hour, minute, etc.) can be skipped"
+    "1.The date arguments – day, month, and year \n",
+    "2.are mandatory, but the time argument (like hour, minute, etc.) can be skipped"
    ]
   },
   {
@@ -444,9 +446,7 @@
      ]
     }
    ],
-   "source": [
-    "print(\"Thanx Fadl :) \")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -484,6 +484,11 @@
     "print(updated_list)\n",
     "print(list(updated_list))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
