The Journey does not exist yet

--- a/basics.ipynb
+++ b/basics.ipynb
@@ -439,13 +439,324 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "'**123'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Justification \n",
+    "'123'.rjust(5,\"*\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thanx Fadl :) \n"
+      "0001\n",
+      "0002\n",
+      "0010\n",
+      "0100\n",
+      "3000\n"
      ]
     }
    ],
+   "source": [
+    "ids=[1,2,10,100,3000]\n",
+    "for i in ids :\n",
+    "    print(str(i).rjust(4,'0'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Python is easy to learn'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Join List of String \n",
+    "' '.join(['Python','is','easy','to','learn'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Python', 'is', 'easy', 'to', 'learn']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Split It breaks down a string into a list of individual words and returns\n",
+    "'Python is easy to learn'.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Try']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"Try\".split()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conditional Statements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter one of the following colors - red, orange or blue:blue\n",
+      "Your favorite color is blue\n"
+     ]
+    }
+   ],
+   "source": [
+    "color=input('Enter one of the following colors - red, orange or blue:')\n",
+    "if color=='red':\n",
+    "    print('Your favorite color is red')\n",
+    "elif color=='orange':\n",
+    "    print('Your favorite color is orange')\n",
+    "elif color=='blue':\n",
+    "    print('Your favorite color is blue')\n",
+    "else:\n",
+    "    print(\"You entered the wrong color\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "#for loop\n",
+    "sum=0\n",
+    "for i in range(1,10,2):\n",
+    "    sum=sum+i\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a a a a \n",
+      "\n",
+      "b b b b \n",
+      "\n",
+      "c c c c \n",
+      "\n",
+      "d d d d \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Nested loop\n",
+    "for i in 'abcd':\n",
+    "    for j in range(4):\n",
+    "        print(i,end=\" \")\n",
+    "    print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lambda Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(lambda x,y:(x+y))(5,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def Sum(x,y):\n",
+    "    return x+y\n",
+    "Sum(3,8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = lambda a : a + 10\n",
+    "print(x(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = lambda a, b : a * b\n",
+    "print(x(5, 6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = lambda a, b, c : a + b + c\n",
+    "print(x(5, 6, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your score:abc\n",
+      "Enter only an integer value !\n",
+      "Enter your score:demo\n",
+      "Enter only an integer value !\n",
+      "Enter your score:78\n",
+      "You obtained a score of  78\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    try:\n",
+    "        n=int(input('Enter your score:'))\n",
+    "        print('You obtained a score of ',n)\n",
+    "        break\n",
+    "    except ValueError:\n",
+    "        print('Enter only an integer value !')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -489,6 +800,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 4 6 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "mytuple=1,4,6,7\n",
+    "x,y,z,m=mytuple\n",
+    "print(x,y,z,m)"
+   ]
   },
   {
    "cell_type": "code",
